--- a/src/components/footer/Footer.css
+++ b/src/components/footer/Footer.css
@@ -4,8 +4,7 @@
   background-color: White;
   height: 50px;
   font-size: 2rem;
-  color: #9d4d8c;
-  border: 0.5px solid #9d4d8c;
+  border: 0.5px solid darkblue;
   border-radius: 5px;
   margin: 50px 0px;
   height: 55px;
