--- a/src/index.css
+++ b/src/index.css
@@ -88,14 +88,14 @@ p {
 
 .btn {
   text-transform: uppercase;
-  background: var(--clr-purple-cw);
+  background: var(--clr-primary-1);
   color: var(--clr-white);
   padding: 0.375rem 0.75rem;
   letter-spacing: var(--spacing);
   display: block;
   transition: var(--transition);
   font-size: 0.875rem;
-  border: 2px solid var(--clr-purple-cw);
+  border: 2px solid var(--clr-primary-9);
   cursor: pointer;
   box-shadow: 0 1px 3px rgba(0, 0, 0, 0.2);
   border-radius: var(--radius);
@@ -103,7 +103,7 @@ p {
 
 .btn:hover {
   color: var(--clr-grey-1);
-  background: var(--clr-orange-cw);
+  background: var(--clr-red-dark);
   border-color: var(--clr-orange-cw);
 }
 
@@ -112,7 +112,7 @@ p {
   min-height: 40vh;
 }
 .bcg-orange {
-  background: var(--clr-orange-cw);
+  background: var(--clr-primary-3);
   text-align: center;
 }
 
@@ -191,9 +191,9 @@ p {
   height: 50px;
 }
 
-#cw {
-  width: 75px;
-  margin-top: 50px;
+#us {
+  width: 85px;
+  margin-top: 85px;
 }
 
 .btn-group {
@@ -205,9 +205,9 @@ p {
 }
 
 .head-tr {
-  background-color: hsl(39, 100%, 69%);
+  background-color: var(--clr-grey-3);
   height: 40px;
-  color: #9e4d8d;
+  color: var(--clr-grey-9);
 }
 
 .table {
